--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -7,88 +7,118 @@
 %\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
 \usepackage{linespacing_fix} % disable extra space before next section
 \usepackage{cite}
-
+\usepackage{textpos}
+\usepackage{xcolor}
+\usepackage{tcolorbox}
+\usepackage{graphicx,calc}
+\newlength\myheight
+\newlength\mydepth
+\settototalheight\myheight{Xygp}
+\settodepth\mydepth{Xygp}
+\setlength\fboxsep{0pt}
+\definecolor{tumblue}{HTML}{0065BD}
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{江涛}
+\name{温柄辉}
 
 % {E-mail}{mobilephone}{homepage}
 % be careful of _ in emaill address
-\contactInfo{(+86) 132-6029-9910}{hijiangtao@gmail.com}{Web前端研发工程师}{GitHub @hijiangtao}
+\contactInfo{(+86) 189-1626-6067}{wbhwenbinghui@gmail.com}{}{}
 % {E-mail}{mobilephone}
 % keep the last empty braces!
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{}
  
+\newcommand{\UniversitaetLogoBreite}{19mm}
+\newcommand{\SeitenrandOben}{1cm}
+\begin{textblock*}{\UniversitaetLogoBreite}[1,0](\textwidth-10mm, -2.0cm)%
+	\raggedleft\includegraphics[width=0.75in]{我的照片.jpg}%
+\end{textblock*}
+ 
 \section{个人总结}
-本人在校成绩优秀、乐观向上，工作负责、自我驱动力强、热爱尝试新事物，认同开放、连接、共享的Web在未来的不可替代性。在校期间长期从事可视分析(Web的2D/3D时空可视化)相关研究，对Web技术发展趋势及前端工程化解决方案有浓厚兴趣。\textbf{现任职于阿里巴巴集团。}
+\begin{itemize}
+\item {自学能力强，勤奋好学；愿意抓住机会，渴望提高自己的能力}
+\item {有丰富的编程实现及开发感知检测，场景重建，视觉SLAM，点云相关等算法经验(包括经典算法以及深度学习)}
+\item {掌握C++, Python (深度学习了解pytorch，以及mmcv框架), Matlab等编程语言，Git版本管理以及多线程/分布式应用开发}
+\item {英语，德语水平胜任文献阅读以及日常会话}
+\end{itemize}
 
 % \section{\faGraduationCap\ 教育背景}
 \section{教育背景}
-\datedsubsection{\textbf{中国科学院大学},计算机应用技术,\textit{在读硕士研究生}}{2015.9 - 2018.6}
-\ \textbf{排名11/133(前10\%)},中国科学院大学学业奖学金(2次),IEEE Student member,预计2018年6月毕业
-\datedsubsection{\textbf{北京理工大学},软件工程,\textit{工学学士}}{2011.9 - 2015.6}
-\ \textbf{排名2/62(前5\%)},国家励志奖学金,人民奖学金(7次),科技竞赛奖(2次),北京市普通高等学校优秀毕业生,北京理工大学优秀毕业生,软件学院金牌毕业生,优秀团员/优秀学生(5次)
-\datedsubsection{\textbf{荷兰 莱顿大学},计算机科学与技术,\textit{国家留学基金委公派交换生}}{2015.3 - 2015.5}
-\ 2014年中国政府奖学金(\textit{http://www.csc.edu.cn/}),DID-ACTE项目交换生(\textit{http://did-acte.org/})
+\datedsubsection{\textbf{慕尼黑工业大学(\textcolor{tumblue}{QS排名37}), \textit{硕士研究生} }}{2021.10 - 至今}
+\datedsubsection{预计2023年12月毕业; 计算机学院: 机器人感知与人工智能}{德国慕尼黑} 
+\datedsubsection{\textbf{同济大学}, \textit{工学学士}}{2016.8 - 2021.7}
+\datedsubsection{汽车学院: 车辆工程}{上海} 
 
 % \section{\faCogs\ IT 技能}
-\section{技术能力}
-% increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.2ex]
-  \item \textbf{编程语言}: JavaScript (ECMAScript, Node.js), HTML/CSS, Python, Go, SQL, C, Shell
-  \item \textbf{操作系统,数据库与工程构建}: Linux/macOS/MySQL/MongoDB/Git/webpack/Progressive Web App
-  \item \textbf{关键词}: React/Vue.js/D3.js(SVG)/three.js(canvas, WebGL)/chrome extension/Express
-\end{itemize}
+%\section{技术能力}
+%% increase linespacing [parsep=0.5ex]
+%\begin{itemize}[parsep=0.2ex]
+%  \item \textbf{编程语言}: JavaScript (ECMAScript, Node.js), HTML/CSS, Python, Go, SQL, C, Shell
+%  \item \textbf{操作系统,数据库与工程构建}: Linux/macOS/MySQL/MongoDB/Git/webpack/Progressive Web App
+%  \item \textbf{关键词}: React/Vue.js/D3.js(SVG)/three.js(canvas, WebGL)/chrome extension/Express
+%\end{itemize}
 
 % \end{itemize}
-
-\section{实习经历}
-\datedsubsection{\textbf{阿里巴巴集团 | Alibaba}, 前端开发工程师}{2017.6-2017.9}
+\section{论文发表}
+\textbf{Binghui Wen$^*$, Haoang Li$^*$, Ming Gao$^*$, Jinhu Dong$^*$} "Semantic Scene Completion via Deformable Deep Implicit Templates", \textbf{ICCV 2023} 顶级计算机视觉会议已接收
 \begin{itemize}
-%   \item 飞猪北京前端团队全面负责各交通线的票务(机票/火车票/汽车票) web 应用与事业群基础架构研发
-  \item 独立负责车站地图开发(React),通过HTML5 本地存储及JSBridge实现在阿里全系应用中发布上线
-  \item 独立负责BU SPM chrome插件开发,支付成功/订单详情等页面的开发与交叉营销的接入工作
+	\item 提出新算法，新思路, 使用深度学习进行场景重建 [3D场景点云$\Rightarrow$3D 实例网格], 效果优于目前同问题Sota (RfD-Net, DIMR)结果（论文多半代码由我编写）
+\end{itemize}
+\section{项目与实习经历}
+\datedsubsection{\textbf{\raisebox{0mm}{{\includegraphics[height=\myheight]{Momenta_Logo.png}}}}\ 感知部门建图定位算法实习生}{2023.4-至今}
+\begin{itemize}
+  \item 建图定位组算法实习生，主要工作为\textcolor{tumblue}{\textbf{建图与定位}}相关算法的创新改进以及应用等，算法包含传统多视角几何以及深度学习
+\end{itemize}
+\datedsubsection{\textbf{Multi-Module Fusion BEV Map Prediction}, 毕业设计项目}{2023.5-至今}
+\begin{itemize}
+  \item 深度关联多种输入模态信息，深度信息监督视觉特征，视觉语义增广点云特征；可选模态包括视觉，LiDAR，以及HD map; 
+  \item 旨在实现\textcolor{tumblue}{\textbf{深度学习端到端}}精准预测自动驾驶场景鸟瞰语义分割地图，并帮助高精定位校正误差
 \end{itemize}
 
-\datedsubsection{\textbf{北京腾云天下科技有限公司 | TalkingData},数据挖掘与可视化工程师}{2015.11-2017.5}
+\datedsubsection{\textbf{Camera Localization in 3D LiDAR Maps}}{2022.10-2023.1}
 \begin{itemize}
-  \item \textbf{利用海量用户定位数据，对城市空间及人群移动特征进行研究。}第一个课题是基于香农熵和人群出行模式，构建城市网格与用户矩阵分析城市多样性/流动性分布；可视分析平台前端与可视化基于D3/Vue/Express开发，数据分析与存储采用Python/MySQL/MongoDB技术，为了均衡大数据情况下的页面可视化渲染消耗用canvas替代svg。第二个课题是对海量商场定位数据做人群分类与可视化查询，依据该系统撰写的论文被CIKM 2016(DAVA Workshop)录用，并收录于中科院软件所年会成果集
-  \item 负责数据科学部HQ LAB的可视化原型开发，主导 TalkingMind 平台系统设计与前端开发
+  \item 运用已有大型点云，在视觉SLAM算法中实现实现相机定位 (ORB-SLAM框架, C++, Ceres, Pangolin, PCL, TBB并行); 锻炼了C++编写中型
+  项目的能力，以及改进算法实现程序高效运行的能力
 \end{itemize}
 
-\datedsubsection{\textbf{北京格灵深瞳信息技术有限公司 | DeepGlint},Web开发工程师}{2015.7-2015.9}
+
+\datedsubsection{\textbf{Mixed-Integer-Programming-based Motion Planner}}{2022.4-2022.10}
 \begin{itemize}
-  \item \textbf{独立负责MUSE部门的可视化组件研发。}与平台研发、设计协作完成 DeepGlint Developer 平台可视化图表组件的集成开发，符合完全定制化渲染、响应式布局与实时更新等特点
-  \item 利用 D3+Vue+WebGL(Three.js) 尝试实现三维空间的人群移动可视化
+	\item 使用混合整数优化方法规划自动驾驶车辆运动轨迹 (Python, Gurobi, Cplex); 规划控制，独立建立数学模型并检验算法，对带约束最小二乘线性优化问题建模以及优化有一定了解
 \end{itemize}
 
-% \begin{onehalfspacing}
-% \end{onehalfspacing}
+\datedsubsection{\textbf{蔚来\ \raisebox{0mm}{{\includegraphics[height=4.6mm]{NIO_logo.svg.png}}}}\ 自动驾驶系统实习生}{2021.7-2021.10}
+\begin{itemize}
+	\item 参与自动驾驶数据平台的建立，主要工作为车端试验信息切片、算法还原、数据归纳等部分代码编写; 锻炼了合作编程开发能力
+\end{itemize}
 
-% \datedsubsection{\textbf{DID-ACTE} 荷兰莱顿}{2015年3月 - 2015年6月}
-% \role{本科毕业设计}{LIACS 交换生}
-% 利用结巴分词对中国古文进行分词与词性标注，用已有领域知识训练形成 classifier 并对结果进行调优
-% \begin{onehalfspacing}
-% \begin{itemize}
-%   \item 利用结巴分词对中国古文进行分词与词性标注
-%   \item 利用已有领域知识训练形成 classifier, 并用分词结果进行测试反馈
-%   \item 尝试不同规则，对 classifier 进行调优
-% \end{itemize}
-% \end{onehalfspacing}
+\datedsubsection{\textbf{国家大学生创新性实验计划项目: 中心城区大型居住小区停车问题解决方案}}{2018.9-2019.9}
+\begin{itemize}
+	\item 通过充分的准备和优秀的表现，在校内的答辩中脱颖而出，进入国家级大学生创新性实验计划项目比赛，并凭借此项目获得创新创业论坛三等
+	奖；准备和进行项目展示/报告的经验充分
+	\item 参加 “互联网+” 大学生创新创业大赛并且获得银奖
+\end{itemize}
 
-\section{竞赛获奖/项目作品}
+
+\section{社团和组织经历}
+\datedsubsection{\textbf{DIAN Racing同济电车队 底盘转向组}}{ }
+\begin{itemize}
+	\item 成员 底盘部转向组，参与转向系统的设计以及制造
+\end{itemize}
+\datedsubsection{\textbf{同济大学汽车文化宣讲团外联部}}{ }
+\begin{itemize}
+	\item 成员 参加同济汽车文化宣讲团，曾在上海多所中小学宣讲汽车文化；喜欢汽车文化，愿意上台分享
+\end{itemize}
+
+\section{技能/证书及其他}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.2ex]
-%   \item LeetCodeOJ Solutions, \textit{https://github.com/hijiangtao/LeetCodeOJ}
-  \item 第三届中国软件杯大学生软件设计大赛\textbf{全国一等奖}( \textit{http://www.cnsoftbei.com/} ),2014 年8月
-  \item 中国机器人大赛创意设计大赛\textbf{全国特等奖}( \textit{http://www.rcccaa.org/} ),2013年8月
-%   \item 中国机器人大赛暨Robocup公开赛(武术擂台赛)全国一等奖,2013年10月
-  \item 第11届北京理工大学“世纪杯”竞赛学生课外科技作品竞赛\textbf{特等奖},2013年8月
-  \item VIS Components for security system, \textit{https://hijiangtao.github.io/ss-vis-component/}
-  \item 个人博客：\textit{https://hijiangtao.github.io/}，更多作品见 \textit{https://github.com/hijiangtao}
-%   \item 电视节目"爸爸去哪儿"可视化分析展示, \textit{https://hijiangtao.github.io/variety-show-hot-spot-vis/}
+  \item \textbf{技能：} C++, Python, Matlab, Git, Linux操作, SSH
+  \item \textbf{语言：} 英语（CET-6，雅思） 德语 (C2, Test Daf 5444)
+  \item \textbf{兴趣爱好：} 编程，学习前沿科技，电子游戏，Wargame
 \end{itemize}
+
 
 % \section{\faHeartO\ 项目/作品摘要}
 % \section{项目/作品摘要}
@@ -99,15 +129,15 @@
 % \datedline{\textit{Info-Vis}, https://github.com/ISCAS-VIS/infovis-ucas}{}
 
 
-% \section{\faInfo\ 社会实践/其他}
-\section{社区参与/实践其他}
-% increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.2ex]
-  \item 乐于参与开源社区讨论,\textbf{参与翻译 Vue.js, webpack, WebAssembly, Babel 文档，印记中文成员}
-  \item 中国科学院大学2016秋季学期可视化与可视分析课程助教，\textit{http://vis.ios.ac.cn/infovis-ucas/}
-  \item 未来论坛学生会成员、北理社联新闻信息中心主任、北理工软件学院学生会宣传部副部长(2012-2016)
-  \item 2013-2015 北京市共青团“温暖衣冬”志愿者,第九届园博会志愿者,2014 FLL机器人世锦赛志愿者
-\end{itemize}
+%% \section{\faInfo\ 社会实践/其他}
+%\section{社区参与/实践其他}
+%% increase linespacing [parsep=0.5ex]
+%\begin{itemize}[parsep=0.2ex]
+%  \item 乐于参与开源社区讨论,\textbf{参与翻译 Vue.js, webpack, WebAssembly, Babel 文档，印记中文成员}
+%  \item 中国科学院大学2016秋季学期可视化与可视分析课程助教，\textit{http://vis.ios.ac.cn/infovis-ucas/}
+%  \item 未来论坛学生会成员、北理社联新闻信息中心主任、北理工软件学院学生会宣传部副部长(2012-2016)
+%  \item 2013-2015 北京市共青团“温暖衣冬”志愿者,第九届园博会志愿者,2014 FLL机器人世锦赛志愿者
+%\end{itemize}NIO_logo.svg.png
 
 %% Reference
 %\newpage
